--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
     <main class="content page__content">
       <!-- Profile -->
       <section class="profile content__section">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
+        <img
+          class="profile__avatar"
+          src="./images/avatar.jpg"
+          alt="Аватар"
+        >
         <div class="profile__info">
-          <p class="profile__name">Жак-Ив Кусто</p>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-button"></button>
           <p class="profile__job">Исследователь океана</p>
         </div>
@@ -39,7 +43,7 @@
               alt="Калининград"
            >
             <div class="card__caption">
-              <p class="card__mane-card">Калининград</p>
+              <h2 class="card__mane-card">Калининград</h2>
               <button class="card__like-button"></button>
             </div>
           </li>
@@ -51,7 +55,7 @@
               alt="Санкт Петербург"
            >
             <div class="card__caption">
-              <p class="card__mane-card">Санкт-Петербург</p>
+              <h2 class="card__mane-card">Санкт-Петербург</h2>
               <button class="card__like-button"></button>
             </div>
           </li>
@@ -61,11 +65,9 @@
               class="card__image"
               src="./images/NizhnyNovgorod.jpeg"
               alt="Нижний Новгород"
-            >
+           >
             <div class="card__caption">
-              <p class="card__mane-card">
-                Нижний Новгород
-              </p>
+              <h2 class="card__mane-card">Нижний Новгород</h2>
               <button class="card__like-button"></button>
             </div>
           </li>
@@ -77,7 +79,7 @@
               alt="Дюкинский карьер"
            >
             <div class="card__caption">
-              <p class="card__mane-card">Дюкинский карьер</p>
+              <h2 class="card__mane-card">Дюкинский карьер</h2>
               <button class="card__like-button"></button>
             </div>
           </li>
@@ -89,15 +91,19 @@
               alt="Владимир"
            >
             <div class="card__caption">
-              <p class="card__mane-card">Владимир</p>
+              <h2 class="card__mane-card">Владимир</h2>
               <button class="card__like-button"></button>
             </div>
           </li>
 
           <li class="card">
-            <img class="card__image" src="./images/Vyborg.jpeg" alt="Выборг">
+            <img
+              class="card__image"
+              src="./images/Vyborg.jpeg"
+              alt="Выборг"
+            >
             <div class="card__caption">
-              <p class="card__mane-card">Выборг</p>
+              <h2 class="card__mane-card">Выборг</h2>
               <button class="card__like-button"></button>
             </div>
           </li>
@@ -130,11 +136,7 @@
             placeholder="О себе"
             value="Исследователь океана"
          >
-          <input
-            type="submit"
-            class="popup__submit"
-            value="Сохранить"
-          >
+          <input type="submit" class="popup__submit" value="Сохранить">
         </form>
       </div>
     </section>
