--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         >
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button"></button>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__job">Исследователь океана</p>
         </div>
-        <button class="profile__add-button"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
 
       <!-- Cards -->
@@ -44,7 +44,7 @@
            >
             <div class="card__caption">
               <h2 class="card__mane-card">Калининград</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
 
@@ -56,7 +56,7 @@
            >
             <div class="card__caption">
               <h2 class="card__mane-card">Санкт-Петербург</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
 
@@ -68,7 +68,7 @@
            >
             <div class="card__caption">
               <h2 class="card__mane-card">Нижний Новгород</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
 
@@ -80,7 +80,7 @@
            >
             <div class="card__caption">
               <h2 class="card__mane-card">Дюкинский карьер</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
 
@@ -92,7 +92,7 @@
            >
             <div class="card__caption">
               <h2 class="card__mane-card">Владимир</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
 
@@ -104,7 +104,7 @@
             >
             <div class="card__caption">
               <h2 class="card__mane-card">Выборг</h2>
-              <button class="card__like-button"></button>
+              <button class="card__like-button" type="button"></button>
             </div>
           </li>
         </ul>
@@ -119,7 +119,7 @@
     <!-- Pop-Up -->
     <section class="popup">
       <div class="popup__container">
-        <button class="popup__close"></button>
+        <button class="popup__close" type="button"></button>
         <form class="popup__form" name="profile-form">
           <h2 class="popup__title">Редактировать профиль</h2>
           <input
