--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         <button class="popup__close" type="button"></button>
         <img
           class="popup__image"
-          src="./images/Kalinigrad.jpeg"
-          alt="Калининград"
+          src=""
+          alt=""
         >
-        <h2 class="popup__title-image">Калининград</h2>
+        <h2 class="popup__title-image"></h2>
       </div>
     </section>
 
