--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <button class="popup__close" type="button"></button>
         <img
           class="popup__image"
-          src=""
+          src="#"
           alt=""
         >
         <h2 class="popup__title-image"></h2>
@@ -126,7 +126,7 @@
         <button class="card__trash" type="button"></button>
         <img
           class="card__image"
-          src=""
+          src="#"
           alt=""
         >
         <div class="card__caption">
