--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Pop-Up -->
       <!-- Pop-Up Profile -->
-    <section class="popup popup_profile-form">
+    <div class="popup popup_profile-form">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <form class="popup__form" name="profile-form">
@@ -76,9 +76,9 @@
           >
         </form>
       </div>
-    </section>
+    </div>
       <!-- Pop-Up Card -->
-    <section class="popup popup_card-form">
+    <div class="popup popup_card-form">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <form class="popup__form" name="new-card-form">
@@ -106,9 +106,9 @@
           >
         </form>
       </div>
-    </section>
+    </div>
       <!-- Pop-Up Card Image -->
-    <section class="popup popup_card-image">
+    <div class="popup popup_card-image">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <img
@@ -118,7 +118,7 @@
         >
         <h2 class="popup__title-image"></h2>
       </div>
-    </section>
+    </div>
 
     <!-- Template -->
     <template id="card-template">
@@ -136,6 +136,7 @@
       </li>
     </template>
 
+    <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
