--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
+    <script type="module" src="./scripts/index.js" defer></script>
+    <!-- <script type="module" src="./scripts/FormValidator.js" defer></script>
+
+    <script type="module" src="./scripts/Card.js" defer></script> -->
     <title>Mesto</title>
   </head>
   <body class="page">
@@ -119,7 +123,6 @@
             type="submit"
             class="popup__button"
             value="Сохранить"
-
           >
         </form>
       </div>
@@ -152,10 +155,6 @@
         </div>
       </li>
     </template>
-
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
 
   </body>
 </html>
